<resources>
    <string name="app_name">Monitor</string>
    <string name="w_main_processes">Processes</string>
    <string name="w_main_remove_all">Remove All</string>
    <string name="w_main_memory">Memory</string>
    <string name="cd_paramter_status_icon">Parameter status icon</string>
    <string name="p_cputotalusage">Total CPU usage</string>
    <string name="p_kb">- kB</string>
    <string name="p_percentage">-%</string>
    <string name="p_cpuusage">CPU Usage</string>
    <string name="p_cpuanothermonitor">AnotherMonitor</string>
    <string name="p_memtotal">Memory</string>
    <string name="p_memused">Mem used</string>
    <string name="p_memavailable">Mem available</string>
    <string name="p_memfree">MemFree</string>
    <string name="p_cached">Cached</string>
    <string name="p_threshold">Threshold</string>
    <string name="about_title">About</string>

    <string name="w_main_choose_process">Choose other process(es)</string>
    <string name="w_processes_empty">Ouch! There was some problem when retrieving the system processes.</string>
    <string name="w_main_hide">Hide</string>
    <string name="notify_toast_error_2">It hasn\'t been possible to start recording:</string>

    <string name="w_processes_title">Processes</string>
    <string name="w_processes_android_51_problem"><big><b>Ouch!</b></big>
		\n\nFor Android 5.1.1+ the processes list doesn\'t work anymore.
		It\'s due to an undocumented Android API change. Still trying to find out some workaround.
		\n\nMore info: http://stackoverflow.com/questions/30619349/android-5-1-1-and-above-getrunningappprocesses-returns-my-application-packag</string>


</resources>
